--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+
 // main colors
 $accent: #029491;
 $white: #ffffff;
@@ -9,12 +11,9 @@ $accent-light: #7ce3e1;
 $blue: #5970ff;
 
 // fonts
-$default-font: 'Open Sans', sans-serif;
+$default-font: 'Inter', sans-serif;
 
-$dark-accent: darken($accent, 20%);
-$hard-dark-accent: darken($accent, 30%);
+// shadow
+$box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.04);
 
-$bx-accent: 0 4px 4px rgba($accent, 0.25);
-$bx-16: 0 3px 6px rgba(0, 0, 0, 0.16);
-
-$mobile: 480px;
+$mobile: 375px;
