feat: add global styles

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -16,4 +16,5 @@ $default-font: 'Inter', sans-serif;
 // shadow
 $box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.04);
 
+$desktop: 1440px;
 $mobile: 375px;
