--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -6,12 +6,8 @@
 
 	max-width: $desktop;
 	width: 100%;
-	height: 100%;
+	// height: 100%;
 
 	padding: 25px 55px;
 	margin: 0 auto;
-
-	/* @media (max-width: $mobile) {
-		height: 260px !important;
-	} */
 }
