--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -56,6 +56,12 @@ body {
 	overflow-x: hidden;
 }
 
+button {
+	background-color: transparent;
+	outline: none;
+	border: none;
+}
+
 img {
 	max-width: 100%;
 }
