feat: add component info for account

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -9,6 +9,7 @@ $black: #000000;
 $yellow: #ffb64f;
 $accent-light: #7ce3e1;
 $blue: #5970ff;
+$green: #8ac540;
 
 // fonts
 $default-font: 'Inter', sans-serif;
