refactor: change header

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -18,4 +18,5 @@ $default-font: 'Inter', sans-serif;
 $box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.04);
 
 $desktop: 1440px;
+$tablet: 880px;
 $mobile: 460px;
