--- a/src/components/layout/header/burger/Burger.module.scss
+++ b/src/components/layout/header/burger/Burger.module.scss
@@ -2,51 +2,127 @@
 @import 'src/assets/styles/animations';
 
 .burgerMenu {
-	position: relative;
+	// position: relative;
 
-	button {
+	& > .burgerBtn {
+		position: relative;
+		z-index: 100;
 		> svg {
-			/* width: 30px;
-			height: 30px;
-			color: #fff; */
 			animation: opacity 0.4s;
 		}
 	}
 
 	.menu {
-		position: absolute;
-		width: 150px;
-		top: calc(100% + 8px);
-		right: 0;
-		background-color: $accent;
-		padding: 10px 12px;
-		font-size: 16px;
-		border-radius: 10px 0px 10px 10px;
-		min-width: 116px;
 		display: none;
 		animation: opacity 0.4s;
+		background-color: $accent;
+
+		position: absolute;
+		left: 0px;
+		right: 0px;
+		top: 0px;
+		bottom: 0px;
 
 		&.show {
 			display: block;
 		}
 
-		> ul {
-			list-style: none;
+		& > .logo {
+			background-image: url('../../../../../public/images/logo-footer.svg');
+			background-repeat: no-repeat;
+			background-size: contain;
 
-			button {
-				font-size: 16px;
+			max-width: 142px;
+			width: 100%;
+			height: 55px;
+			cursor: pointer;
+
+			position: relative;
+			top: 20px;
+			left: 60px;
+			z-index: 99;
+		}
+
+		& > .listMenu {
+			list-style: none;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			margin-top: 95px;
+
+			li {
+				margin: 13px 0px;
+
+				&:nth-child(4) {
+					margin-top: 60px;
+				}
 			}
 
 			a {
-				color: #000;
+				color: $white;
+				font-family: Inter;
 				text-decoration: none;
-				transition: color 0.2s ease;
+				font-size: 16px;
+				font-weight: 400;
+				line-height: normal;
+				letter-spacing: 0.16px;
+				transition: color 0.15s ease-in-out;
 				&:hover,
 				&:active {
-					color: $accent;
+					color: $black;
 					margin: 4px 0px;
 				}
 			}
 		}
+	}
+}
+
+.registration {
+	background-color: transparent;
+	outline: none;
+	border: none;
+
+	color: $white;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: normal;
+	letter-spacing: 0.16px;
+	font-family: Inter;
+	font-weight: 400;
+	cursor: pointer;
+	opacity: 0.4;
+
+	transition: all 0.15s ease-in-out;
+
+	&:hover {
+		color: $black;
+		opacity: 1;
+	}
+}
+
+.btnLogin {
+	outline: none;
+	border: none;
+	cursor: pointer;
+	background: $accent-light;
+
+	width: 295px;
+	height: 51px;
+	border-radius: 5px;
+	background-color: $accent-light;
+
+	color: $black;
+	font-family: Inter;
+	font-size: 20px;
+	font-weight: 500;
+	line-height: normal;
+	letter-spacing: 0.2px;
+
+	transition: all 0.15s ease-in-out;
+
+	&:hover {
+		color: $white;
+		opacity: 0.9;
 	}
 }
