--- a/src/components/screens/home/Home.module.scss
+++ b/src/components/screens/home/Home.module.scss
@@ -1,6 +1,30 @@
 @import 'src/assets/styles/variables';
 
-.title {
-	font-size: 20px;
-	font-family: $default-font;
+.sectionMain {
+	display: flex;
+	.info {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		& > .title {
+			max-width: 743px;
+			color: $black;
+			font-size: 60px;
+			font-weight: 900;
+			line-height: normal;
+			letter-spacing: 0.6px;
+			margin-bottom: 20px;
+		}
+
+		& > .description {
+			max-width: 534px;
+			color: $black;
+			font-family: Inter;
+			font-size: 20px;
+			font-weight: 400;
+			line-height: normal;
+			letter-spacing: 0.2px;
+			margin-bottom: 70px;
+		}
+	}
 }
