--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -6,8 +6,14 @@
 
 	max-width: $desktop;
 	width: 100%;
-	height: 100%;
+	// height: 100%;
 
 	padding: 25px 55px;
 	margin: 0 auto;
+}
+
+@media (max-width: $mobile) {
+	.wrapper {
+		padding: 25px 10px;
+	}
 }
