--- a/src/components/screens/home/Home.module.scss
+++ b/src/components/screens/home/Home.module.scss
@@ -2,12 +2,24 @@
 
 .sectionMain {
 	display: flex;
+	& > img {
+		max-width: 560px;
+		max-height: 520px;
+
+		width: 100%;
+		height: 100%;
+
+		min-width: 247px;
+		min-height: 227px;
+	}
 	.info {
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
+		justify-content: space-between;
 		& > .title {
 			max-width: 743px;
+			min-width: 230px;
 			color: $black;
 			font-size: 60px;
 			font-weight: 900;
@@ -25,6 +37,28 @@
 			line-height: normal;
 			letter-spacing: 0.2px;
 			margin-bottom: 70px;
+		}
+	}
+}
+
+@media (max-width: $tablet) {
+	.sectionMain {
+		flex-direction: column;
+	}
+}
+
+@media (max-width: 680px) {
+	.sectionMain {
+		& > .info {
+			margin-bottom: 40px;
+			.title {
+				letter-spacing: 0.28px;
+				font-size: 28px;
+			}
+			.description {
+				font-size: 18px;
+				margin-bottom: 30px;
+			}
 		}
 	}
 }
