--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -18,8 +18,8 @@
 
 	transition: background-color 0.15s ease;
 	@media (max-width: $mobile) {
-		font-size: 16px;
-		padding: 12px 38px;
+		font-size: 18px;
+		padding: 14px 30px;
 	}
 
 	&:hover {
@@ -32,6 +32,7 @@
 }
 
 .medium {
-	width: 335px;
+	max-width: 345px;
+	width: 100%;
 	height: 59px;
 }
