--- a/src/components/screens/plans/Plans.module.scss
+++ b/src/components/screens/plans/Plans.module.scss
@@ -56,6 +56,26 @@
 
 		.planInfo {
 			padding: 30px 10px 20px 30px;
+			position: relative;
+		}
+
+		.planInfo .planInfoBadge {
+			padding: 3px 10px;
+			width: 134px;
+			height: 24px;
+			border-radius: 10px;
+			background-color: #3ba5e0;
+
+			color: $white;
+			font-size: 14px;
+			font-weight: 400;
+			line-height: normal;
+			letter-spacing: 0.14px;
+			text-align: center;
+
+			position: absolute;
+			right: 10px;
+			top: 12px;
 		}
 
 		.planInfo .planPrice {
