--- a/src/components/screens/plans/Plans.module.scss
+++ b/src/components/screens/plans/Plans.module.scss
@@ -55,7 +55,7 @@
 		}
 
 		.planInfo {
-			padding: 30px 10px 20px 30px;
+			padding: 30px 30px 20px 30px;
 			position: relative;
 		}
 
@@ -153,4 +153,45 @@
 .planBusiness {
 	color: $white;
 	background-color: $black;
+}
+
+@media (max-width: $tablet) {
+	.sectionPlans {
+		.title {
+			font-size: 28px;
+			letter-spacing: 0.28px;
+			margin-bottom: 35px;
+		}
+
+		.listPlans {
+			align-items: center;
+			flex-direction: column;
+			margin: 0px auto;
+
+			.itemPlans {
+				margin-bottom: 40px;
+
+				.listPlanConditions .itemPlanConditionsText {
+					font-size: 16px;
+					letter-spacing: 0.16px;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: $mobile) {
+	.sectionPlans {
+		.listPlans {
+			.itemPlans {
+				max-width: 335px;
+
+				.planTitleBlock {
+					.planTitleText {
+						font-size: 20px;
+					}
+				}
+			}
+		}
+	}
 }
