--- a/src/components/screens/auth/Auth.module.scss
+++ b/src/components/screens/auth/Auth.module.scss
@@ -1,17 +1,16 @@
 @import 'src/assets/styles/variables';
 
 .sectionTitle {
-	display: flex;
 	margin-bottom: 100px;
 	& > img {
-		max-width: 560px;
-		max-height: 520px;
+		max-width: 321px;
+		max-height: 342px;
 
 		width: 100%;
 		height: 100%;
 
-		min-width: 247px;
-		min-height: 227px;
+		min-width: 207px;
+		min-height: 207px;
 	}
 
 	.title {
@@ -21,5 +20,14 @@
 		font-weight: 900;
 		line-height: normal;
 		letter-spacing: 0.8px;
+		margin-bottom: 14px;
+	}
+}
+
+@media (max-width: 680px) {
+	.sectionTitle {
+		.title {
+			font-size: 22px;
+		}
 	}
 }
