feat: create page for status 404

--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -1,6 +1,11 @@
 @import 'src/assets/styles/variables';
 
 .footer {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
