--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -1,19 +1,25 @@
 @import 'src/assets/styles/variables';
 
-.wrapper {
-	display: flex;
-	flex-direction: column;
+.mainWrapper {
+	position: relative;
+	min-height: 100%;
 
-	max-width: $desktop;
-	width: 100%;
-	// height: 100%;
+	.contentWrapper {
+		display: flex;
+		flex-direction: column;
 
-	padding: 25px 55px;
-	margin: 0 auto;
+		max-width: $desktop;
+		width: 100%;
+
+		padding: 25px 55px 230px 55px;
+		margin: 0 auto;
+	}
 }
 
 @media (max-width: $mobile) {
-	.wrapper {
-		padding: 25px 10px;
+	.mainWrapper {
+		.wrapper {
+			padding: 25px 10px;
+		}
 	}
 }
