--- a/src/components/screens/auth/Auth.module.scss
+++ b/src/components/screens/auth/Auth.module.scss
@@ -1,26 +1,32 @@
 @import 'src/assets/styles/variables';
 
-.sectionTitle {
-	margin-bottom: 100px;
-	& > img {
-		max-width: 321px;
-		max-height: 342px;
+.authWrapper {
+	display: flex;
+	justify-content: space-between;
+	.sectionTitle {
+		margin-right: 30px;
+		margin-bottom: 100px;
+		& > img {
+			margin-left: 100px;
+			max-width: 321px;
+			max-height: 342px;
 
-		width: 100%;
-		height: 100%;
+			width: 100%;
+			height: 100%;
 
-		min-width: 207px;
-		min-height: 207px;
-	}
+			min-width: 207px;
+			min-height: 207px;
+		}
 
-	.title {
-		max-width: 817px;
-		color: $black;
-		font-size: 40px;
-		font-weight: 900;
-		line-height: normal;
-		letter-spacing: 0.8px;
-		margin-bottom: 14px;
+		.title {
+			max-width: 817px;
+			color: $black;
+			font-size: 40px;
+			font-weight: 900;
+			line-height: normal;
+			letter-spacing: 0.8px;
+			margin-bottom: 14px;
+		}
 	}
 }
 
