--- a/src/components/screens/auth/form/Form.module.scss
+++ b/src/components/screens/auth/form/Form.module.scss
@@ -4,7 +4,8 @@
 .wrapper {
 	position: relative;
 	max-width: 429px;
-	min-height: 523px;
+	width: 100%;
+	height: 523px;
 	padding: 25px 25px 30px 25px;
 
 	display: flex;
@@ -74,6 +75,11 @@
 		text-decoration-line: underline;
 		text-align: center;
 		margin-bottom: 30px;
+		transition: color 0.15 ease-in-out;
+
+		&:hover {
+			color: $accent;
+		}
 	}
 
 	.social {
@@ -86,9 +92,45 @@
 			margin-bottom: 15px;
 		}
 		.socialList {
-			width: 312px;
+			max-width: 312px;
+			width: 100%;
 			display: flex;
+			flex-wrap: wrap;
 			justify-content: space-between;
+		}
+	}
+}
+
+@media (max-width: 1000px) {
+	.wrapper {
+		position: absolute;
+		top: 350px;
+	}
+}
+
+@media (max-width: 680px) {
+	.wrapper {
+		.lockImg {
+			top: -80px;
+			left: 60px;
+		}
+	}
+}
+
+@media (max-width: $mobile) {
+	.wrapper {
+		max-width: 320px;
+		height: 580px;
+		.social {
+			.socialList {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: flex-start;
+
+				& > li {
+					margin: 0 5px;
+				}
+			}
 		}
 	}
 }
