--- a/src/components/screens/auth/form/Form.module.scss
+++ b/src/components/screens/auth/form/Form.module.scss
@@ -57,6 +57,13 @@
 		}
 	}
 
+	.loader {
+		width: 100%;
+		height: 100%;
+		margin-top: 70px;
+		text-align: center;
+	}
+
 	.form {
 		display: flex;
 		flex-direction: column;
@@ -110,6 +117,7 @@
 
 @media (max-width: 680px) {
 	.wrapper {
+		left: 7%;
 		.lockImg {
 			top: -80px;
 			left: 60px;
