--- a/src/components/layout/header/burger/Burger.module.scss
+++ b/src/components/layout/header/burger/Burger.module.scss
@@ -14,7 +14,7 @@
 
 	.menu {
 		display: none;
-		animation: opacity 0.4s;
+		animation: opacity 0.2s;
 		background-color: $accent;
 		z-index: 99;
 
@@ -33,7 +33,7 @@
 			background-repeat: no-repeat;
 			background-size: contain;
 
-			max-width: 142px;
+			max-width: 136px;
 			width: 100%;
 			height: 55px;
 			cursor: pointer;
@@ -125,5 +125,25 @@
 	&:hover {
 		color: $white;
 		opacity: 0.9;
+	}
+}
+
+@media (max-width: $tablet) {
+	.burgerMenu {
+		.menu {
+			.logo {
+				left: 30px;
+			}
+		}
+	}
+}
+
+@media (max-width: $mobile) {
+	.burgerMenu {
+		.menu {
+			.logo {
+				left: 15px;
+			}
+		}
 	}
 }
