--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -102,8 +102,8 @@
 
 .statistics {
 	padding: 10px 8px;
-	width: 180px;
-	height: 65px;
+	max-width: 180px;
+	min-height: 65px;
 	border-radius: 5px;
 	background-color: rgba(217, 217, 217, 0.4);
 
@@ -178,11 +178,14 @@
 		padding: 20px 30px;
 		.mobileMenu {
 			display: flex;
-			justify-content: space-between;
+			justify-content: flex-end;
 			align-items: center;
 			max-width: 300px;
 			width: 100%;
 			margin-left: 15px;
+			.statistics {
+				margin-right: 15px;
+			}
 		}
 	}
 
@@ -195,10 +198,18 @@
 
 @media (max-width: $mobile) {
 	.header {
-		padding: 20px 10px;
 		.mobileMenu {
 			.statistics {
-				margin-right: 15px;
+				.used,
+				.limit {
+					display: flex;
+					flex-direction: column;
+				}
+				.used span,
+				.limit span {
+					margin-top: 3px;
+					margin-left: 0px;
+				}
 			}
 		}
 	}
