--- a/src/components/screens/plans/Plans.module.scss
+++ b/src/components/screens/plans/Plans.module.scss
@@ -22,9 +22,11 @@
 
 		.itemPlans {
 			max-width: 530px;
+			width: 100%;
 			border-radius: 10px;
 			background: $white;
 			box-shadow: $box-shadow;
+			margin: 0px 10px;
 
 			.planTitle {
 				display: flex;
@@ -153,6 +155,19 @@
 .planBusiness {
 	color: $white;
 	background-color: $black;
+}
+
+@media (max-width: 1040px) {
+	.sectionPlans {
+		.listPlans {
+			align-items: center;
+			flex-direction: column;
+			.itemPlans {
+				margin-bottom: 40px;
+				max-width: 430px;
+			}
+		}
+	}
 }
 
 @media (max-width: $tablet) {
