--- a/src/components/screens/search/Search.module.scss
+++ b/src/components/screens/search/Search.module.scss
@@ -6,13 +6,13 @@
 	.sectionImage {
 		margin: 50px 0px 0px 60px;
 		/* max-width: 560px;
-		max-height: 520px;
+		// max-height: 520px;
 
-		width: 100%;
-		height: 100%;
+		// width: 100%;
+		// height: 100%;
 
-		min-width: 247px;
-		min-height: 227px; */
+		// min-width: 247px;
+		// min-height: 227px; */
 	}
 	.info {
 		display: flex;
@@ -36,7 +36,6 @@
 			font-weight: 400;
 			line-height: normal;
 			letter-spacing: 0.2px;
-			margin-bottom: 70px;
 		}
 	}
 }
