--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -113,6 +113,18 @@
 	font-weight: 400;
 	line-height: normal;
 	letter-spacing: 0.1px;
+
+	.loader {
+		max-width: 180px;
+		width: 100%;
+		text-align: center;
+		margin-top: 15px;
+		& > img {
+			width: 60px;
+			height: 15px;
+		}
+	}
+
 	& > .used {
 		margin-bottom: 4px;
 	}
