feat: add styles for react select tonality

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -10,6 +10,7 @@ $yellow: #ffb64f;
 $accent-light: #7ce3e1;
 $blue: #5970ff;
 $green: #8ac540;
+$grey: #c7c7c7;
 
 // fonts
 $default-font: 'Inter', sans-serif;
