--- a/src/components/screens/search/searchForm/SearchForm.module.scss
+++ b/src/components/screens/search/searchForm/SearchForm.module.scss
@@ -5,7 +5,7 @@
 	position: relative;
 	max-width: 872px;
 	width: 100%;
-	height: 523px;
+	min-height: 523px;
 	padding: 25px 25px 30px 25px;
 
 	display: flex;
