--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -198,6 +198,74 @@ input[type='number'] {
 	}
 }
 
+.checkbox.style-b {
+	display: inline-block;
+	position: relative;
+	padding-left: 40px;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.checkbox.style-b input {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
+	opacity: 0.4;
+}
+.checkbox.style-b input:checked ~ .checkbox__checkmark {
+	background-color: #fff;
+	opacity: 1;
+}
+.checkbox.style-b input:checked ~ .checkbox__checkmark:after {
+	opacity: 1;
+}
+.checkbox.style-b:hover input ~ .checkbox__checkmark {
+	background-color: #eee;
+}
+.checkbox.style-b:hover input:checked ~ .checkbox__checkmark {
+	background-color: #fff;
+}
+.checkbox.style-b input:checked ~ .checkbox__body {
+	opacity: 1;
+}
+.checkbox.style-b .checkbox__checkmark {
+	position: absolute;
+	top: 0px;
+	left: 0;
+	height: 20px;
+	width: 20px;
+	background-color: $white;
+	border: 1px solid $black;
+	opacity: 0.4;
+	transition: background-color 0.25s ease;
+}
+.checkbox.style-b .checkbox__checkmark:after {
+	content: '';
+	position: absolute;
+	left: 7px;
+	top: 3px;
+	width: 5px;
+	height: 10px;
+	border: solid #55d036;
+	border-width: 0 2px 2px 0;
+	transform: rotate(45deg);
+	opacity: 0;
+	transition: opacity 0.25s ease;
+}
+.checkbox.style-b .checkbox__body {
+	color: $black;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: normal;
+	letter-spacing: 0.54px;
+	opacity: 0.4;
+	transition: background-color 0.25s ease;
+}
+
 @media (max-width: $mobile) {
 	.error {
 		font-size: 0.7rem;
