--- a/src/components/screens/search/searchForm/SearchForm.module.scss
+++ b/src/components/screens/search/searchForm/SearchForm.module.scss
@@ -24,11 +24,13 @@
 
 	.form {
 		display: flex;
-		flex-direction: column;
-		align-content: center;
-		justify-content: center;
 
-		margin-bottom: 15px;
+		.fields {
+			display: flex;
+			flex-direction: column;
+			align-content: center;
+			justify-content: center;
+		}
 	}
 
 	.changePassword {
