--- a/src/components/screens/search/Search.module.scss
+++ b/src/components/screens/search/Search.module.scss
@@ -39,3 +39,14 @@
 		}
 	}
 }
+
+.sectionForm {
+	display: flex;
+	.sectionFormImage {
+		margin: 50px 0px 0px 60px;
+		max-width: 413px;
+		max-height: 440px;
+		width: 100%;
+		height: 100%;
+	}
+}
