--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -23,6 +23,12 @@
 	text-align: center;
 }
 
+.small {
+	max-width: 305px;
+	width: 100%;
+	height: 59px;
+}
+
 .medium {
 	max-width: 390px;
 	width: 100%;
