--- a/src/components/screens/search/Search.module.scss
+++ b/src/components/screens/search/Search.module.scss
@@ -5,14 +5,14 @@
 	margin-bottom: 50px;
 	.sectionImage {
 		margin: 50px 0px 0px 60px;
-		/* max-width: 560px;
-		// max-height: 520px;
+		max-width: 400px;
+		max-height: 111px;
 
-		// width: 100%;
-		// height: 100%;
+		width: 100%;
+		height: 100%;
 
-		// min-width: 247px;
-		// min-height: 227px; */
+		min-width: 200px;
+		min-height: 56px;
 	}
 	.info {
 		display: flex;
@@ -48,5 +48,35 @@
 		max-height: 440px;
 		width: 100%;
 		height: 100%;
+	}
+}
+
+@media (max-width: 1140px) {
+	.sectionForm {
+		flex-direction: column;
+	}
+}
+
+@media (max-width: 800px) {
+	.sectionSearch {
+		.info {
+			& > .title {
+				font-size: 28px;
+				letter-spacing: 0.28px;
+				margin-bottom: 20px;
+			}
+
+			& > .description {
+				font-size: 18px;
+			}
+		}
+	}
+}
+
+@media (max-width: $mobile) {
+	.sectionSearch {
+		.sectionImage {
+			margin: 130px 0px 0px 10px;
+		}
 	}
 }
