--- a/src/components/screens/home/Home.module.scss
+++ b/src/components/screens/home/Home.module.scss
@@ -39,6 +39,11 @@
 			letter-spacing: 0.2px;
 			margin-bottom: 70px;
 		}
+
+		& > .btnWrapper {
+			max-width: 390px;
+			width: 100%;
+		}
 	}
 }
 
