--- a/src/components/screens/search-result/SearchResult.module.scss
+++ b/src/components/screens/search-result/SearchResult.module.scss
@@ -40,3 +40,15 @@
 		}
 	}
 }
+
+.sectionCarousel {
+	margin-bottom: 100px;
+	.carouselTitle {
+		margin-bottom: 20px;
+		color: #000;
+		font-size: 30px;
+		font-weight: 900;
+		line-height: normal;
+		letter-spacing: 0.6px;
+	}
+}
