--- a/src/components/screens/search-result/result-carousel/ResultCarousel.module.scss
+++ b/src/components/screens/search-result/result-carousel/ResultCarousel.module.scss
@@ -3,6 +3,14 @@
 .wrapperCarousel {
 	max-width: 1220px;
 	margin: 0 auto;
+	.carouselQuantity {
+		color: #949494;
+		font-size: 18px;
+		font-weight: 400;
+		line-height: normal;
+		letter-spacing: 0.36px;
+		margin-bottom: 30px;
+	}
 	.carouselTable {
 		position: absolute;
 		z-index: 50;
