--- a/src/components/screens/search-result/SearchResult.module.scss
+++ b/src/components/screens/search-result/SearchResult.module.scss
@@ -45,10 +45,17 @@
 	margin-bottom: 100px;
 	.carouselTitle {
 		margin-bottom: 20px;
+	}
+	.carouselTitle,
+	.carouselTitleCards {
 		color: #000;
 		font-size: 30px;
 		font-weight: 900;
 		line-height: normal;
 		letter-spacing: 0.6px;
 	}
+}
+
+.carouselTitleCards {
+	margin-bottom: 48px;
 }
