--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -14,13 +14,22 @@
 
 	transition: background-color 0.15s ease;
 	@media (max-width: $mobile) {
-		font-size: 18px;
-		padding: 7px 20px;
+		font-size: 16px;
+		padding: 7px 15px;
 	}
 }
 
 .wrapper {
 	text-align: center;
+}
+
+.small {
+	width: 100%;
+	height: 47px;
+	background: $accent-light;
+	color: $black;
+	font-weight: 400;
+	letter-spacing: 0.32px;
 }
 
 .medium {
