--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -292,8 +292,18 @@ input[type='number'] {
 	background-image: url('../../../public/images/arrowRightHistogram.png');
 	background-repeat: no-repeat;
 	background-position: center;
+	opacity: 1;
 	&:hover {
 		background-image: url('../../../public/images/arrowRightHistogram.png');
+		opacity: 1;
+	}
+	&::focus {
+		background-image: url('../../../public/images/arrowRightHistogram.png');
+		opacity: 1;
+	}
+	&::active {
+		background-image: url('../../../public/images/arrowRightHistogram.png');
+		opacity: 1;
 	}
 }
 
@@ -304,8 +314,18 @@ input[type='number'] {
 	background-image: url('../../../public/images/arrowLeftHistogram.png');
 	background-repeat: no-repeat;
 	background-position: center;
+	opacity: 1;
 	&:hover {
 		background-image: url('../../../public/images/arrowLeftHistogram.png');
+		opacity: 1;
+	}
+	&::focus {
+		background-image: url('../../../public/images/arrowLeftHistogram.png');
+		opacity: 1;
+	}
+	&::active {
+		background-image: url('../../../public/images/arrowLeftHistogram.png');
+		opacity: 1;
 	}
 }
 
@@ -326,5 +346,17 @@ input[type='number'] {
 			max-width: 100%;
 			width: 100%;
 		}
+	}
+}
+
+@media (max-width: $mobile) {
+	.carouselHistograms {
+		margin-left: 0px;
+	}
+	.carouselHistograms .slick-next {
+		right: -35px;
+	}
+	.carouselHistograms .slick-prev {
+		left: -160px;
 	}
 }
