--- a/src/components/screens/search-result/card-document/CardDocument.module.scss
+++ b/src/components/screens/search-result/card-document/CardDocument.module.scss
@@ -8,7 +8,7 @@
 	background: $white;
 	box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
 	padding: 20px 30px 30px 30px;
-	margin: 10px;
+	// margin: 10px;
 	.serviceInfo {
 		display: flex;
 	}
