--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -13,10 +13,6 @@
 	cursor: pointer;
 
 	transition: background-color 0.15s ease;
-	@media (max-width: $mobile) {
-		font-size: 16px;
-		padding: 7px 15px;
-	}
 }
 
 .wrapper {
@@ -30,11 +26,23 @@
 	color: $black;
 	font-weight: 400;
 	letter-spacing: 0.32px;
+
+	&:hover {
+		background-color: rgba($blue, 0.7);
+	}
+
+	@media (max-width: $mobile) {
+		font-size: 16px;
+	}
 }
 
 .medium {
 	width: 100%;
 	height: 59px;
+	@media (max-width: $mobile) {
+		font-size: 18px;
+		padding: 7px 15px;
+	}
 }
 
 .btnAvailable {
