--- a/src/components/screens/search-result/card-document/CardDocument.module.scss
+++ b/src/components/screens/search-result/card-document/CardDocument.module.scss
@@ -2,13 +2,15 @@
 
 .wrapperCard {
 	max-width: 641px;
-	min-height: 694px;
+	min-height: 700px;
+	// max-height: 1600px;
 	width: 100%;
+	// height: 100%;
 	border-radius: 10px;
 	background: $white;
 	box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
 	padding: 20px 30px 30px 30px;
-	// margin: 10px;
+	margin: 0 14px;
 	.serviceInfo {
 		display: flex;
 	}
@@ -90,6 +92,7 @@
 
 @media (max-width: $tablet) {
 	.wrapperCard {
+		margin: 10px 0px;
 		.date,
 		.words,
 		.source {
