refactor: add pattern for form

--- a/src/components/ui/alert/Alert.module.scss
+++ b/src/components/ui/alert/Alert.module.scss
@@ -65,6 +65,11 @@
 		background-color: #f75940;
 		color: $white;
 	}
+
+	&.success {
+		background-color: #00b16a;
+		color: $white;
+	}
 }
 
 @keyframes fadeOut {
