--- a/src/components/screens/search-result/card-document/CardDocument.module.scss
+++ b/src/components/screens/search-result/card-document/CardDocument.module.scss
@@ -58,7 +58,7 @@
 	}
 	.cardBadge {
 		padding: 3px 10px;
-		width: 134px;
+		max-width: 200px;
 		height: 24px;
 		border-radius: 10px;
 		background-color: $yellow;
@@ -73,7 +73,7 @@
 	}
 	.cardImage {
 		max-width: 581px;
-		max-height: 158px;
+		max-height: 260px;
 		width: 100%;
 		height: 100%;
 		margin-bottom: 20px;
