fix: change some styles for CardDocument

--- a/src/components/screens/search-result/SearchResult.module.scss
+++ b/src/components/screens/search-result/SearchResult.module.scss
@@ -69,10 +69,20 @@
 	.listCards {
 		margin-bottom: 40px;
 		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
 	}
 	.btnWrapper {
 		max-width: 305px;
 		margin: 0 auto;
+	}
+}
+
+@media (max-width: 1150px) {
+	.sectionCards {
+		.listCards {
+			flex-direction: column;
+		}
 	}
 }
 
