--- a/src/components/screens/search-result/card-document/CardDocument.module.scss
+++ b/src/components/screens/search-result/card-document/CardDocument.module.scss
@@ -1,7 +1,7 @@
 @import 'src/assets/styles/variables';
 
 .wrapperCard {
-	max-width: 641px;
+	max-width: 600px;
 	min-height: 700px;
 	// max-height: 1600px;
 	width: 100%;
@@ -10,7 +10,7 @@
 	background: $white;
 	box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
 	padding: 20px 30px 30px 30px;
-	margin: 0 14px;
+	margin: 10px 14px;
 	.serviceInfo {
 		display: flex;
 	}
@@ -34,7 +34,7 @@
 		text-decoration-line: underline;
 	}
 	.title {
-		max-width: 546px;
+		max-width: 540px;
 		color: $black;
 		font-size: 26px;
 		font-weight: 500;
@@ -72,8 +72,8 @@
 		margin-bottom: 14px;
 	}
 	.cardImage {
-		max-width: 581px;
-		max-height: 260px;
+		max-width: 550px;
+		max-height: 290px;
 		width: 100%;
 		height: 100%;
 		margin-bottom: 20px;
