--- a/src/components/screens/search-result/card-document/CardDocument.module.scss
+++ b/src/components/screens/search-result/card-document/CardDocument.module.scss
@@ -2,8 +2,7 @@
 
 .wrapperCard {
 	max-width: 600px;
-	min-height: 700px;
-	// max-height: 1600px;
+	// min-height: 920px;
 	width: 100%;
 	// height: 100%;
 	border-radius: 10px;
@@ -11,6 +10,9 @@
 	box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
 	padding: 20px 30px 30px 30px;
 	margin: 10px 14px;
+
+	display: flex;
+	flex-direction: column;
 	.serviceInfo {
 		display: flex;
 	}
@@ -35,15 +37,16 @@
 	}
 	.title {
 		max-width: 540px;
+		min-height: 130px;
 		color: $black;
 		font-size: 26px;
 		font-weight: 500;
 		line-height: normal;
 		letter-spacing: 0.52px;
-		margin-bottom: 20px;
 	}
 	.textInfo {
 		margin-bottom: 30px;
+		min-height: 200px;
 		.text {
 			max-width: 581px;
 			width: 100%;
@@ -56,24 +59,36 @@
 			opacity: 0.5;
 		}
 	}
-	.cardBadge {
-		padding: 3px 10px;
-		max-width: 200px;
-		height: 24px;
-		border-radius: 10px;
-		background-color: $yellow;
+	.badges {
+		position: relative;
+		display: flex;
+		height: 30px;
+		margin-bottom: 5px;
+		.cardBadge {
+			padding: 3px 10px;
+			max-width: 200px;
+			height: 24px;
+			border-radius: 10px;
+			background-color: $yellow;
 
-		color: $black;
-		font-size: 14px;
-		font-weight: 400;
-		line-height: normal;
-		letter-spacing: 0.14px;
-		text-align: center;
-		margin-bottom: 14px;
+			position: absolute;
+			top: 0px;
+			left: 0px;
+
+			margin-right: 15px;
+
+			color: $black;
+			font-size: 14px;
+			font-weight: 400;
+			line-height: normal;
+			letter-spacing: 0.14px;
+			text-align: center;
+			margin-bottom: 14px;
+		}
 	}
 	.cardImage {
 		max-width: 550px;
-		max-height: 290px;
+		max-height: 270px;
 		width: 100%;
 		height: 100%;
 		margin-bottom: 20px;
@@ -89,6 +104,12 @@
 		}
 	}
 }
+
+/* @media (max-width: 1370px) {
+	.wrapperCard {
+		min-height: 100%;
+	}
+} */
 
 @media (max-width: $tablet) {
 	.wrapperCard {
