--- a/src/components/screens/home-carousel/HomeCarousel.module.scss
+++ b/src/components/screens/home-carousel/HomeCarousel.module.scss
@@ -21,26 +21,26 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 350px;
-	.card {
-		padding: 20px 50px 60px 20px;
-		max-width: 400px;
-		min-height: 225px;
-		border-radius: 10px;
-		background: $white;
-		box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-		margin: 15px 15px;
+	min-height: 350px;
+	padding: 0 15px;
+}
 
-		.cardText {
-			margin-top: 12px;
-			max-width: 313px;
-			color: $black;
-			font-size: 18px;
-			font-weight: 400;
-			line-height: normal;
-			letter-spacing: 0.18px;
-		}
-	}
+.slickArrowLeft {
+	position: absolute;
+	top: 110px;
+	left: -30px;
+	background-image: url('../../../../public/images/arrowLeftHistogram.png');
+	background-repeat: no-repeat;
+	cursor: pointer;
+}
+
+.slickArrowRight {
+	position: absolute;
+	top: 110px;
+	right: -30px;
+	background-image: url('../../../../public/images/arrowRightHistogram.png');
+	background-repeat: no-repeat;
+	cursor: pointer;
 }
 
 @media (max-width: 680px) {
@@ -48,5 +48,15 @@
 		.title {
 			font-size: 28px;
 		}
+	}
+}
+
+@media (max-width: $mobile) {
+	.slickArrowLeft {
+		left: -20px;
+	}
+
+	.slickArrowRight {
+		right: -20px;
 	}
 }
