--- a/src/components/screens/home/Home.module.scss
+++ b/src/components/screens/home/Home.module.scss
@@ -6,6 +6,7 @@
 	& > img {
 		max-width: 560px;
 		max-height: 520px;
+		user-select: none;
 
 		width: 100%;
 		height: 100%;
@@ -49,6 +50,7 @@
 
 .sectionImage {
 	margin-bottom: 110px;
+	user-select: none;
 	& > img {
 		overflow: hidden;
 	}
@@ -77,6 +79,11 @@
 			.description {
 				font-size: 18px;
 				margin-bottom: 30px;
+			}
+
+			& > .btnWrapper {
+				max-width: 480px;
+				width: 100%;
 			}
 		}
 	}
