feat: add new Loader

--- a/src/components/screens/search-result/result-carousel/ResultCarousel.module.scss
+++ b/src/components/screens/search-result/result-carousel/ResultCarousel.module.scss
@@ -4,6 +4,17 @@
 	max-width: 1220px;
 	margin: 0 auto;
 	position: relative;
+
+	.loader {
+		text-align: center;
+		margin: auto;
+
+		& > img {
+			width: 12%;
+			height: 12%;
+		}
+	}
+
 	.carouselQuantity {
 		color: #949494;
 		font-size: 18px;
