--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -118,10 +118,11 @@
 		max-width: 180px;
 		width: 100%;
 		text-align: center;
-		margin-top: 15px;
+		margin: auto;
+
 		& > img {
-			width: 60px;
-			height: 15px;
+			width: 23%;
+			height: 23%;
 		}
 	}
 
