--- a/src/components/screens/auth/form/Form.module.scss
+++ b/src/components/screens/auth/form/Form.module.scss
@@ -58,10 +58,13 @@
 	}
 
 	.loader {
-		width: 100%;
-		height: 100%;
-		margin-top: 70px;
 		text-align: center;
+		margin: auto;
+
+		& > img {
+			width: 90%;
+			height: 90%;
+		}
 	}
 
 	.form {
