refactor: add styles for footer

--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 @import 'src/assets/styles/variables';
 
-.footer {
+/* .footer {
 	position: absolute;
 	left: 0;
 	bottom: 0;
@@ -42,4 +42,4 @@
 			height: 45px;
 		}
 	}
-}
+} */
