--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -16,6 +16,50 @@
 	}
 }
 
+.footer {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background-color: $accent;
+	padding: 25px 45px 25px 60px;
+	& > .logo {
+		background-image: url('../../../../public/images/logo-footer.svg');
+		background-repeat: none;
+		background-size: contain;
+
+		max-width: 142px;
+		width: 100%;
+		height: 55px;
+		cursor: pointer;
+	}
+	& > .info p {
+		color: $white;
+		text-align: right;
+		font-size: 14px;
+		font-weight: 400;
+		line-height: normal;
+
+		&:nth-child(4) {
+			margin-top: 20px;
+		}
+	}
+}
+
+@media (max-width: $mobile) {
+	.footer {
+		padding: 25px 19px 25px 19px;
+		& > .logo {
+			max-width: 112px;
+			height: 45px;
+		}
+	}
+}
+
 @media (max-width: $mobile) {
 	.mainWrapper {
 		.contentWrapper {
