refactor: add styles for footer

--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -28,7 +28,7 @@
 	background-color: $accent;
 	padding: 25px 45px 25px 60px;
 	& > .logo {
-		background-image: url('../../../../public/images/logo-footer.svg');
+		background-image: url('../../../public/images/logo-footer.svg');
 		background-repeat: none;
 		background-size: contain;
 
