fix: fix some styles in auth form

--- a/src/components/screens/auth/Auth.module.scss
+++ b/src/components/screens/auth/Auth.module.scss
@@ -46,9 +46,12 @@
 	}
 }
 
-@media (max-width: 680px) {
+@media (max-width: 800px) {
 	.authWrapper {
 		.sectionTitle {
+			& > img {
+				margin-left: 10%;
+			}
 			.title {
 				font-size: 22px;
 			}
