--- a/src/components/screens/search/Search.module.scss
+++ b/src/components/screens/search/Search.module.scss
@@ -84,7 +84,8 @@
 
 	.sectionForm {
 		.sectionFormImage {
-			margin: 50px 0px 0px 10%;
+			max-width: 70%;
+			margin: 50px 0px 0px 25%;
 		}
 	}
 }
