--- a/src/components/screens/search-result/card-document/CardDocument.module.scss
+++ b/src/components/screens/search-result/card-document/CardDocument.module.scss
@@ -87,11 +87,16 @@
 		}
 	}
 	.cardImage {
-		max-width: 550px;
-		max-height: 300px;
+		max-width: 580px;
+		max-height: 158px;
+		overflow: hidden;
 		width: 100%;
 		height: 100%;
 		margin-bottom: 20px;
+		border-radius: 10px;
+		& > img {
+			margin: -50px 0 0 0px;
+		}
 	}
 	.serviceBtn {
 		width: 100%;
