fix: fix method for format xml

--- a/src/components/screens/search-result/card-document/CardDocument.module.scss
+++ b/src/components/screens/search-result/card-document/CardDocument.module.scss
@@ -46,7 +46,7 @@
 	}
 	.textInfo {
 		margin-bottom: 30px;
-		// min-height: 200px;
+		min-height: 200px;
 		.text {
 			max-width: 581px;
 			width: 100%;
