--- a/src/components/layout/header/burger/Burger.module.scss
+++ b/src/components/layout/header/burger/Burger.module.scss
@@ -7,6 +7,7 @@
 	& > .burgerBtn {
 		position: relative;
 		z-index: 100;
+		margin-left: 15px;
 		> svg {
 			animation: opacity 0.4s;
 		}
@@ -22,7 +23,8 @@
 		left: 0px;
 		right: 0px;
 		top: 0px;
-		bottom: 0px;
+		min-height: 100vh;
+		// bottom: 0px;
 
 		&.show {
 			display: block;
