--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -289,24 +289,29 @@ input[type='number'] {
 	right: -45px;
 	width: 39px;
 	height: 39px;
-	background-image: url('../../../public/images/arrowRightHistogram.png');
+	background-image: url('../../../public/images/arrowLeftHistogram.png');
+	transform: rotate(180deg);
 	background-repeat: no-repeat;
 	background-position: center;
 	opacity: 1;
 	&:hover {
-		background-image: url('../../../public/images/arrowRightHistogram.png');
+		background-image: url('../../../public/images/arrowLeftHistogram.png');
+		transform: rotate(180deg);
 		opacity: 1;
 	}
 	&:focus {
-		background-image: url('../../../public/images/arrowRightHistogram.png');
+		background-image: url('../../../public/images/arrowLeftHistogram.png');
+		transform: rotate(180deg);
 		opacity: 1;
 	}
 	&::target {
-		background-image: url('../../../public/images/arrowRightHistogram.png');
+		background-image: url('../../../public/images/arrowLeftHistogram.png');
+		transform: rotate(180deg);
 		opacity: 1;
 	}
 	&:active {
-		background-image: url('../../../public/images/arrowRightHistogram.png');
+		background-image: url('../../../public/images/arrowLeftHistogram.png');
+		transform: rotate(180deg);
 		opacity: 1;
 	}
 }
