--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -56,10 +56,10 @@
 }
 
 .btnBlock {
-	color: $black;
-	background-color: #d2d2d2;
+	background-color: rgba(89, 112, 255, 0.5);
+	color: $white;
 	cursor: not-allowed;
-	font-size: 18px;
+	font-size: 22px;
 }
 
 /* .large {
