--- a/src/components/screens/auth/form/Form.module.scss
+++ b/src/components/screens/auth/form/Form.module.scss
@@ -4,8 +4,9 @@
 .wrapper {
 	position: relative;
 	max-width: 429px;
+	max-height: 550px;
 	width: 100%;
-	height: 523px;
+	height: 100%;
 	padding: 25px 25px 30px 25px;
 
 	display: flex;
