fix: fix styles in auth form

--- a/src/components/screens/auth/form/Form.module.scss
+++ b/src/components/screens/auth/form/Form.module.scss
@@ -134,7 +134,7 @@
 @media (max-width: $mobile) {
 	.wrapper {
 		max-width: 320px;
-		height: 580px;
+		max-height: 568px;
 		.social {
 			.socialList {
 				display: flex;
